--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.8.2",
+    "react-simplemde-editor": "^5.2.0",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
