--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "apexcharts": "^4.1.0",
     "clsx": "^2.1.1",
+    "easymde": "^2.20.0",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.543.0",
     "react": "^19.0.0",
