--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "apexcharts": "^4.1.0",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "easymde": "^2.20.0",
     "flatpickr": "^4.6.13",
@@ -32,6 +34,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.8.2",
     "react-simplemde-editor": "^5.2.0",
